# foia-assistant

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  test_api_key.py  test_langgraph.py
.claude/: settings.local.json
docs/: epic_2_implementation_plan.md  epic_2_technical_design.md  foia_brainlift.md  foia_epic_2_brief.md  foia_epic_3_brief.md  foia_epic_3_implementation_plan.md  foia_epic_3_technical_design.md  foia_history.md  foia_implementation_plan.md  foia_response_assistant_epic_brief.md  foia_system_architecture.md  foia_tech_stack.md
sample_docs/: budget_report_q1.txt  contract_maintenance_002.txt  contract_renewal_notice.txt  email_azure_cloud_project.txt  email_blue_sky_budget.txt  email_blue_sky_budget_fwd.txt  email_blue_sky_data_analysis.txt  email_blue_sky_final_report.txt  email_blue_sky_funding_extension.txt  email_blue_sky_kickoff.txt  email_blue_sky_kickoff_fwd.txt  email_blue_sky_milestone_report.txt  email_blue_sky_update.txt  email_blue_sky_update_fwd.txt  email_coffee_machine_broken.txt  email_conference_room_booking.txt  email_equipment_delivery_sky.txt  email_holiday_schedule.txt  email_lunch_plans.txt  email_parking_permit_renewal.txt  email_printer_maintenance.txt  email_research_collaboration_sky.txt  email_research_data_backup.txt  email_system_upgrade_notification.txt  email_team_lunch_friday.txt  email_vendor_meeting_sky.txt  employee_directory_2024.txt  employee_handbook_2024.txt  facility_maintenance_report.txt  hr_policy_vacation.txt  incident_report_001.txt  invoice_cleaning_services.txt  it_maintenance_schedule.txt  meeting_minutes_research_review.txt  memo_environmental_monitoring.txt  performance_review_template.txt  policy_telework.txt  procurement_contract_001.txt  project_status_atmospheric_research.txt  purchase_order_office_supplies.txt  (+7 more)
sample_docs/FOIA_Response/: cover_letter_template.txt  exemption_log.csv  processing_summary.txt
src/: __init__.py  config.py  constants.py  exceptions.py  main.py
src/gui/: __init__.py  main_window.py  styles.py
src/langgraph/: __init__.py  state.py  workflow.py
src/models/: __init__.py  audit.py  classification.py  document.py  feedback.py  request.py
src/processing/: audit_manager.py  document_store.py  feedback_manager.py  (+4 more)
tests/: test_classifier_with_feedback.py  test_document_store.py  test_feedback_manager.py  test_integration_phase1.py  test_integration_phase2.py  test_parallel_worker.py  test_request_manager.py  test_request_model.py
(+30 files in other folders)
